# unien

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.venv_confirm/: pyvenv.cfg
configs/: base16k.yaml
data/: tiny_shakespeare_excerpt.txt
docs/: api.md  bootstrap.md  design.md  experiments.md
phase_b_assets/: ann_index.json  landmarks.json  landmarks.pt
scripts/: bootstrap_phase_b.py  build_landmarks.py  hparam_sweep.py  index_ann.py  prepare_corpus.py  profile_decode.py  run_phase_b_grid.py  smoke.sh  train_sample.py
src/uelm4/: __init__.py
tests/: test_ann.py  test_cac.py  test_causality.py  test_cde.py  test_controller.py  test_decode.py  test_energy.py  test_hparam_sweep.py  test_landmark_io.py  test_memory.py  test_phase_b.py  test_simplex.py  test_solver_step.py  test_train_sample.py  test_wmf.py
unien_out/: run_phase_b_modern_beta_energy.command  run_phase_b_modern_capacity_energy.command  run_phase_b_modern_capacity_presets.command  run_phase_b_modern_fast_energy.command  run_phase_b_modern_long_cpu_v2.command  run_phase_b_modern_quality_energy.command
unien_out/balanced_20251005_185627/: grid_results.json  history.json  pareto.csv  report.md  summary.csv
unien_out/confirm_20251005_182029/: grid_results.json  history.json  summary.csv
unien_out/fast_20251005_185624/: grid_results.json  history.json  pareto.csv  report.md  summary.csv
unien_out/fast_energy_20251005_203425/: grid_results.json  history.json  pareto.csv  report.md  summary.csv
unien_out/grid_20251005_170446/: grid_results.json  history.json  pareto.csv  (+2 more)
(+146 files in other folders)
