[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uelm4"
version = "0.1.0"
description = "Unified Equilibrium Language Model (Phase-A/B scaffold)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.3",
  "numpy>=1.24",
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"uelm4" = ["config/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
